<resources>
    <string name="app_name">InventoryApp</string>
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="editor">Edit products</string>
    <string name="name_hint">Product name</string>
    <string name="price_hint">Price</string>
    <string name="quantity_hint">Quantity</string>
    <string name="supplier_name_hint">Supplier name</string>
    <string name="supplier_phone_hint">Supplier phone number</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="unknown_phone">Unknown phone</string>
   <!--













    <string name="category_overview">Overview</string>
    <string name="unit_pet_weight">kg</string>




    <string name="category_gender">Gender</string>-->

    <!-- Label for measurement information in the editor [CHAR LIMIT=30] -->
    <!--<string name="category_measurement">Measurement</string>-->

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <!--<string name="hint_pet_name">Name</string>


    <string name="hint_pet_breed">Breed</string>


    <string name="hint_pet_weight">Weight</string>

 -->

</resources>
